@@ -86,6 +86,13 @@ if ($RCMAIL->action=='login' && $RCMAIL->task=='mail') {
     // send auth cookie if necessary
     $RCMAIL->authenticate_session();
 
+    // log successful login
+    if ($RCMAIL->config->get('log_logins') && $RCMAIL->config->get('debug_level') & 1)
+      console(sprintf('Successful login for %s (id %d) from %s',
+                      trim(get_input_value('_user', RCUBE_INPUT_POST), ' '),
+                      $_SESSION['user_id'],
+                      $_SERVER['REMOTE_ADDR']));
+
     // send redirect
     header("Location: {$RCMAIL->comm_path}");
     exit;
